increase contrast in login link, fix instagram iframe sizing

--- a/wp-content/themes/wp-theme/assets/sass/app/_home.sass
+++ b/wp-content/themes/wp-theme/assets/sass/app/_home.sass
@@ -1,8 +1,5 @@
 body.home
 
-	+mobile
-		padding-top: 45px
-
 	.post
 		margin-bottom: 70px
 
