--- a/wp-content/themes/wp-theme/assets/sass/partials/_wysiwyg.sass
+++ b/wp-content/themes/wp-theme/assets/sass/partials/_wysiwyg.sass
@@ -17,6 +17,3 @@
 
 	h3
 		margin-bottom: 1em
-
-	iframe
-		max-width: 100% !important
